force-app/main/default/objects/Menu_Item__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the menu item is currently available for order.</description>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>