force-app/main/default/objects/Menu_Item__c/fields/Calories__c.field-meta.xml
<CustomField>
    <fullName>Calories__c</fullName>
    <description>The caloric value of the menu item, if applicable.</description>
    <label>Calories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>