force-app/main/default/objects/Menu_Item__c/fields/Menu__c.field-meta.xml
<CustomField>
    <fullName>Menu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>inks the menu item to the menu it belongs to.</description>
    <label>Menu</label>
    <referenceTo>Menu__c</referenceTo>
    <relationshipLabel>Menu Items</relationshipLabel>
    <relationshipName>Menu_Items</relationshipName>
    <type>Lookup</type>
</CustomField>