force-app/main/default/objects/Menu_Item__c/fields/Menu_Category__c.field-meta.xml
<CustomField>
    <fullName>Menu_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the menu item to a specific category (e.g., &quot;Appetizers&quot;).</description>
    <label>Menu Category</label>
    <referenceTo>Menu_Category__c</referenceTo>
    <relationshipLabel>Menu Items</relationshipLabel>
    <relationshipName>Menu_Items</relationshipName>
    <type>Lookup</type>
</CustomField>